# Yggdrasil-Project

./: .gitignore  LICENSE  PLANO_DE_ACAO.md  PUBLISHING.md  README.md  pyproject.toml
docs/: metodologia.md
docs/credit-risk/: lgd-segmenter.md  pd-segmenter.md  relatorio-mudancas-lgd-sessao.md  tree-segmenter.md
notebooks/02_experimentos/: 01. Explorando dbutils.py
notebooks/03_modeling/: 01_esteira_ml_mlflow.ipynb
notebooks/credit_risk/: 01_lgd_segmenter.ipynb  01_pd_segmenter.ipynb  02_relatorios_validacao_lgd.ipynb
notebooks/tutoriais/: 00_tutorial_yggdrasil.ipynb  01_tutorial_lgd.ipynb  02_tutorial_eda_features.ipynb  03_tutorial_feature_selection.ipynb  04_tutorial_lgd_segmenter.ipynb  04_tutorial_tree_segmenter.ipynb  05_tutorial_instalacao_e_interfaces.ipynb  05_tutorial_pd_segmenter.ipynb  06_tutorial_model_segmenter.ipynb  07_tutorial_esteira_ml_mlflow.ipynb  08_tutorial_capital_economico.ipynb  09_tutorial_modelos_econometricos.ipynb
src/yggdrasil/: __init__.py  config.py  data.py  pipeline.py
src/yggdrasil/credit_risk/: __init__.py
src/yggdrasil/credit_risk/capital/: asrf.py  correlation.py  measures.py  monte_carlo.py  portfolio.py  products.py  report.py  tracking.py
src/yggdrasil/credit_risk/econometric/: __init__.py  panel.py  series.py  transforms.py
src/yggdrasil/credit_risk/lgd/: README.md  __init__.py  segmenter.py  ui.py
src/yggdrasil/credit_risk/model/: segmenter.py  ui.py
src/yggdrasil/credit_risk/pd/: README.md  __init__.py  segmenter.py  ui.py
src/yggdrasil/credit_risk/tree/: __init__.py  segmenter.py  ui.py
src/yggdrasil/eda/: __init__.py  binning.py  bivariate.py  config.py  correlation.py  dtypes.py  importance.py  plots.py  profile.py  stability.py
src/yggdrasil/feature_selection/: __init__.py  plots.py  selector.py  spark_stats.py
src/yggdrasil/interpretability/: __init__.py  shap_explain.py
src/yggdrasil/metrics/: classification.py  regression.py
src/yggdrasil/monitoring/: __init__.py  psi.py
src/yggdrasil/ratings/: __init__.py  base.py  decile.py  monotonic.py  optbinning.py  quantile.py  tree.py
src/yggdrasil/reporting/: __init__.py  dashboard.py  group_report.py  style.py
src/yggdrasil/tracking/: mlflow_logger.py
src/yggdrasil/utils/: __init__.py
tests/: conftest.py  test_block1_fixes.py  test_capital.py  test_capital_engines.py  test_econometric.py  test_eda_binning_bivariate.py  test_eda_importance_stability.py  test_eda_pipeline.py  test_eda_profile.py  test_feature_selection.py  test_feature_selection_plots.py  test_group_report.py  test_keepalive.py  test_lgd_segmenter.py  test_metrics_classification.py  test_metrics_regression.py  test_model_feature_selection.py  test_model_segmenter.py  test_model_spark_scoring.py  test_model_ui.py  test_pd_segmenter.py  test_pipeline_smoke.py  test_psi.py  test_ratings.py  test_tree_segmenter.py  test_tree_ui.py
yggdrasil/: __init__.py  pipeline.py
yggdrasil/credit_risk/: __init__.py  _common.py  _mlflow_report.py
yggdrasil/credit_risk/capital/: __init__.py  allocation.py  creditrisk_plus.py  migration.py  parameters.py  validation.py
yggdrasil/credit_risk/econometric/: _engine.py  ardl.py  arima.py  base.py  benchmarks.py  config.py  diagnostics.py  fractional.py  report.py  scenarios.py  selection.py  tracking.py  var_vecm.py  vasicek.py
yggdrasil/credit_risk/model/: __init__.py  segmenter.py  ui.py
yggdrasil/credit_risk/tree/: __init__.py  segmenter.py  ui.py
yggdrasil/eda/: binning.py  plots.py  report.py
yggdrasil/feature_selection/: README.md  books.py  boruta.py  config.py  importance.py  plots.py  selector.py  spark_stats.py
yggdrasil/metrics/: __init__.py  regression.py  shift.py
yggdrasil/monitoring/: psi.py
yggdrasil/ratings/: __init__.py  manual.py  monotonic.py
yggdrasil/reporting/: dashboard.py
yggdrasil/tracking/: __init__.py
yggdrasil/training/: __init__.py  pycaret_adapter.py
yggdrasil/utils/: __init__.py  keepalive.py
