[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "Pacote com ferramentas e esteiras de Machine Learning para projetos em dados"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    # Teto em <1.8: o optbinning (0.20.x) ainda chama check_array(force_all_finite=...),
    # argumento que o scikit-learn removeu na 1.8. Sem o teto, uma instalação limpa puxa
    # sklearn>=1.8 e o OptimalBinning.fit() passa a lançar TypeError silenciosamente
    # (engolido em _fit_optbinning_splits -> "sem corte válido"), quebrando os
    # segmentadores. Reavaliar quando o optbinning publicar suporte a sklearn>=1.8.
    "scikit-learn>=1.2,<1.8",
    "scipy>=1.9",
    "mlflow>=2.9",
    "shap>=0.44",
    "optbinning>=0.19",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
# Treino automatizado opcional (motor PyCaret). Pesado e com pins próprios —
# instale apenas se for usar o PyCaretTrainer.
pycaret = ["pycaret>=3.0"]
# Interface interativa do segmentador de LGD (LGDSegmenterUI, ipywidgets) —
# usada dentro do Jupyter/Databricks. O núcleo funciona sem ela.
ui = ["ipywidgets>=8.0", "ipython>=8.0"]
# Geração/aplicação da régua de LGD em PySpark (no Databricks o pyspark já vem
# no cluster; instale só fora dele).
spark = ["pyspark>=3.4"]
# Algoritmos de boosting opcionais para o ModelSegmenter (RandomForest,
# ExtraTrees, GradientBoosting e HistGradientBoosting já vêm via scikit-learn).
lgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]
catboost = ["catboost>=1.2"]
# Atalho: todos os motores de boosting opcionais de uma vez.
boosting = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
# Tuning de hiperparâmetros por otimização bayesiana (ModelSegmenter.tune_optuna).
optuna = ["optuna>=3.0"]
# Ferramentas de desenvolvimento, testes e execução de notebooks.
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yggdrasil*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.urls]
Homepage = "https://github.com/richardguilhermeds/Yggdrasil-Project"
