[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
# Nome de DISTRIBUIÇÃO (o que vai depois de `pip install`). O nome "yggdrasil"
# já está registrado no PyPI por outro projeto, por isso a distribuição usa
# "yggdrasil-project". O nome de IMPORT continua `yggdrasil` (ver
# [tool.setuptools.packages.find]), então o uso segue: `from yggdrasil import ...`.
name = "yggdrasil-project"
version = "0.1.0"
description = "Ferramentas e esteiras governadas de Machine Learning para ciência de dados e risco de crédito (PD/LGD/EAD)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Richard Guilherme", email = "richard.guilherme.dev@gmail.com" }]
maintainers = [{ name = "Richard Guilherme", email = "richard.guilherme.dev@gmail.com" }]
keywords = [
    "machine-learning",
    "credit-risk",
    "risco-de-credito",
    "mlflow",
    "scorecard",
    "pd-lgd-ead",
    "ifrs9",
    "data-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Portuguese (Brazilian)",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    # Teto em <1.8: o optbinning (0.20.x) ainda chama check_array(force_all_finite=...),
    # argumento que o scikit-learn removeu na 1.8. Sem o teto, uma instalação limpa puxa
    # sklearn>=1.8 e o OptimalBinning.fit() passa a lançar TypeError silenciosamente
    # (engolido em _fit_optbinning_splits -> "sem corte válido"), quebrando os
    # segmentadores. Reavaliar quando o optbinning publicar suporte a sklearn>=1.8.
    "scikit-learn>=1.2,<1.8",
    "scipy>=1.9",
    "mlflow>=2.9",
    "shap>=0.44",
    "optbinning>=0.19",
    "matplotlib>=3.6",
    # Motores de boosting incluídos por padrão (o ModelSegmenter os usa direto;
    # RandomForest/ExtraTrees/GradientBoosting/HistGB já vêm via scikit-learn).
    "lightgbm>=4.0",
    "xgboost>=2.0",
    # Tuning bayesiano de hiperparâmetros (ModelSegmenter.tune_optuna) — agora
    # parte do core: a UI do modelo traz o botão "Tunar com Optuna" por padrão e
    # os trials são logáveis no MLflow.
    "optuna>=3.0",
]

[project.optional-dependencies]
# Modelos econométricos (satélite) de PD/LGD/CCF — subpacote
# yggdrasil.credit_risk.econometric. Motores de séries temporais e resposta
# limitada (ARDL, SARIMAX, VECM/Johansen, beta regression, ADF/KPSS/Ljung-Box)
# sobre statsmodels + arch. O restante de credit_risk (capital, segmentadores)
# NÃO exige estes pacotes: o subpacote é carregado sob demanda.
econometric = ["statsmodels>=0.14", "arch>=6.0"]
# Treino automatizado opcional (motor PyCaret). Pesado e com pins próprios —
# instale apenas se for usar o PyCaretTrainer.
pycaret = ["pycaret>=3.0"]
# Interface interativa do segmentador de LGD (LGDSegmenterUI, ipywidgets) —
# usada dentro do Jupyter/Databricks. O núcleo funciona sem ela.
# anywidget: preview CLICÁVEL da árvore na TreeSegmenterUI (selecionar/fundir/
# recolher direto na imagem). Entrega o JS pelo próprio comm do widget, por
# isso funciona também no Databricks (runtimes recentes); sem ele a UI cai no
# PNG estático.
ui = ["ipywidgets>=8.0", "ipython>=8.0", "anywidget>=0.9"]
# Geração/aplicação da régua de LGD em PySpark (no Databricks o pyspark já vem
# no cluster; instale só fora dele).
spark = ["pyspark>=3.4"]
# Boosting: LightGBM e XGBoost já vêm no core (acima). CatBoost segue opcional.
# (RandomForest/ExtraTrees/GradientBoosting/HistGB vêm via scikit-learn.) Os
# extras lgbm/xgboost ficam por compatibilidade — no-op se já instalados.
lgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]
catboost = ["catboost>=1.2"]
# Atalho dos motores de boosting (CatBoost é o único não incluído no core).
boosting = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
# Optuna já vem no core (acima). O extra fica por compatibilidade — no-op se já
# instalado.
optuna = ["optuna>=3.0"]
# Ferramentas de desenvolvimento, testes e execução de notebooks.
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "anywidget>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["yggdrasil*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.urls]
Homepage = "https://github.com/richardguilhermeds/Yggdrasil-Project"
Repository = "https://github.com/richardguilhermeds/Yggdrasil-Project"
Issues = "https://github.com/richardguilhermeds/Yggdrasil-Project/issues"
